# sway-alttab-gui

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: config.rs  daemon.rs  icon_resolver.rs  ipc.rs  keyboard_monitor.rs  main.rs  socket_client.rs  socket_server.rs  sway_client.rs  ui.rs  ui_commands.rs  ui_handler.rs  window_manager.rs  window_switcher.rs
udev/: 70-sway-alttab.rules
