[package]
name = "sway-alttab"
version = "0.1.0"
edition = "2021"
description = "Windows-style Alt+Tab window switcher for Sway"
license = "GPL-3.0-or-later"
repository = "https://github.com/itsjfx/sway-alttab-gui"
keywords = ["sway", "wayland", "window-switcher", "alt-tab"]
categories = ["gui"]
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full", "net"] }
swayipc = "3"
swayipc-async = "2"
futures-lite = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
gtk4 = { version = "0.7", features = ["v4_10"] }
gtk4-layer-shell = "0.2"
glib = "0.18"
freedesktop-desktop-entry = "0.5"
lazy_static = "1.4"
libc = "0.2"
dirs = "5"
